--- a/src/components/Navbar/hover-underline.css
+++ b/src/components/Navbar/hover-underline.css
@@ -25,7 +25,7 @@ a{
 a::after{
     content: "";
     position: absolute;
-    background-color: rgb(40, 19, 230);
+    background-color: rgba(1, 146, 52, 0.801);
     height: 3px;
     width: 0;
     left: 0;
