--- a/src/components/BacktoTop/BacktoTop.css
+++ b/src/components/BacktoTop/BacktoTop.css
@@ -8,7 +8,8 @@
   
   .scroll-container .indicator {
     height: 100%;
-    background: rgb(83, 81, 235);
+    background: rgb(18, 205, 143);
+    z-index: 100;
   }
   
   .scroll-to-top {
@@ -20,7 +21,7 @@
     display: grid;
     place-items: center;
     border-radius: 50%;
-    background-color: rgb(83, 81, 235);
+    background-color: rgb(44, 192, 130);
     color: rgb(255, 255, 255);
     z-index: 1;
   }
@@ -56,11 +57,11 @@
   }
   
   ::-webkit-scrollbar-thumb{
-    background-image: linear-gradient(rgb(166, 166, 166),rgb(243, 65, 184));
+    background-image: linear-gradient(rgb(22, 211, 126),rgb(14, 238, 178));
     border-radius: 25px;
   }
   
   ::-webkit-scrollbar-thumb:hover{
-    background-image: linear-gradient(#5bccee, #190aee);
+    background-image: linear-gradient(#2eba03d5, #039414);
   }
   
