--- a/src/components/Animation/Heart/Heart.css
+++ b/src/components/Animation/Heart/Heart.css
@@ -3,11 +3,9 @@
     width: 350px;
     position: absolute;
     margin: auto;
-    left: 0;
-    right: 0;
-    top: 0;
-    bottom: 0;
-    scale: 0.7;
+    right: 7%;
+    top: 7%;
+    scale: 1;
 }
 .loader div:nth-child(1){
     background-color: #dd1c4b;
