--- a/src/components/Data/Analyze/AnalyzeCard.css
+++ b/src/components/Data/Analyze/AnalyzeCard.css
@@ -10,6 +10,12 @@
 
 }
 
+.number{
+    text-align: right;
+    font-size: 32px;
+    font-weight: 500;
+}
+
 .detail{
     text-align: left;
     font-size: 30px;
