--- a/src/components/Animation/LayeredText/LayeredText.css
+++ b/src/components/Animation/LayeredText/LayeredText.css
@@ -22,13 +22,13 @@ span:before{
         135deg,
         transparent 0,
         transparent 2px,
-        #87CEFA 2px,
-        #87CEFA  4px
+        #ffffff 2px,
+        #ffffff  4px
     );
     -webkit-background-clip: text;
         background-clip: text;
     z-index: -1;
-    -webkit-text-stroke: 2px #87CEFA;
+    -webkit-text-stroke: 2px #ffffff;
     transition: 0.5s;
 }
 span:hover:before{
