--- a/src/components/Data/Home/Calculator.css
+++ b/src/components/Data/Home/Calculator.css
@@ -1,13 +1,12 @@
 .App {
     text-align: center;
-    
     display: flex;
     flex-direction: column;
     align-items: center;
     font-size: calc(10px + 2vmin);
     color: rgb(0, 0, 0);
-
-    margin-top: 15em;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
   }
   
   .container {
@@ -23,17 +22,20 @@
   }
   
   input {
+    width: 600px;
     padding: 0.5rem;
     margin-bottom: 1rem;
     border: none;
-    border-radius: 0.25rem;
-    font-size: 2rem;
+    border-radius: 1rem;
+    font-size: 2.5rem;
+    background-color: darkgray;
   }
   
   button {
     padding: 0.5rem 1rem;
     border: none;
-    border-radius: 0.25rem;
+    margin-top: 1rem;
+    border-radius: 1rem;
     font-size: 2rem;
     cursor: pointer;
     background-color: #61dafb;
