--- a/src/components/Data/Home/Calculator.css
+++ b/src/components/Data/Home/Calculator.css
@@ -26,7 +26,7 @@
     border: none;
     border-radius: 1rem;
     font-size: 1.5rem;
-    background-color: darkgray;
+    background-color: rgb(255, 255, 255);
   }
   
   button {
