--- a/src/components/Data/Home/Calculator.css
+++ b/src/components/Data/Home/Calculator.css
@@ -18,7 +18,11 @@
     font-size: 36px;
   }
   
-  input {
+  .radio input[type="radio"] {
+    margin: 0.1rem;
+  }
+  
+  input[type="number"] {
     font-family: 'Prompt', sans-serif;
     width: 600px;
     padding: 0.5rem;
@@ -28,6 +32,7 @@
     font-size: 1.5rem;
     background-color: rgb(255, 255, 255);
   }
+
   
   button {
     font-family: 'Prompt', sans-serif;
